CI images update

--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-15 12:47:49
+lastsearch = 2024-07-15 13:50:06
 
 [gobearcats.com]
 match = -142.1%%
@@ -72,9 +72,9 @@ title = CIVIL SERVICE COMMISSION CITY AND COUNTY OF ...
 url = https://www.sf.gov/sites/default/files/2024-01/1-30-24 Item #7 PSCs_Part1.pdf
 
 [www.instagram.com]
-match = -36.8%%
-title = Sandra Oh (@iamsandraohinsta)
-url = https://www.instagram.com/iamsandraohinsta/?hl=en
+match = -131.6%%
+title = Nash Howe (@nash.howe) • Instagram photos and videos
+url = https://www.instagram.com/nash.howe/?hl=en
 
 [medboard.nv.gov]
 match = -100.0%%
