--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-15 13:20:44
+lastsearch = 2024-07-15 13:57:06
 
 [silverwow.net]
 match = -255.6%%
@@ -22,8 +22,8 @@ title = Lanshan 2 Pro - ULTRALIGHT TENT
 url = https://3fulgear.com/product/ultralight-tent/lanshan-2-pro/
 
 [www.amazon.de]
-match = -544.4%%
-title = Chan Durable Quality 3 kg / 5 kg 1G Digital Kitchen Scales Food ...
+match = -488.9%%
+title = Chan Durable Quality 3 kg / 5 kg 1G Digital Kitchen Scales ...
 url = https://www.amazon.de/-/en/Durable-Quality-Digital-Kitchen-Measuring/dp/B083JT8S1Y
 
 [fetchthelove.com]
@@ -97,9 +97,9 @@ title = Cheong Chan Elephant Cooking Caramel Sauce 3kg ...
 url = https://www.supplybunny.com/en/products/cheong-chan-elephant-cooking-caramel-sauce-3kg-bottle-6-bottles-per-carton
 
 [shopee.com.my]
-match = -177.8%%
-title = Cheong Chan Cooking Caramel : 3kg
-url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-i.451025624.5793405457
+match = -622.2%%
+title = 3kg 祥珍象标晒油 Cheong Chan Cooking Caramel Dark ...
+url = https://shopee.com.my/3kg-祥珍象标晒油-Cheong-Chan-Cooking-Caramel-Dark-Soy-Sauce-i.121533526.10766512503
 
 [www.ttbsupplies.com]
 match = -422.2%%
