--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-15 10:39:14
+lastsearch = 2024-07-15 13:54:53
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiJVex_b&sig=ACfU3U0qivC24pZrzRKHxpQXfj6Shzr0Xg&hl=en&sa=X&ved=2ahUKEwiW_NLIj6iHAxU5DTQIHUWBCBIQ6AF6BAgTEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfiJJpr8&sig=ACfU3U3HSWP8Jp1TxXHskvdtqjR9fgBKUw&hl=en&sa=X&ved=2ahUKEwjv16Cmu6iHAxVLFFkFHa8LA30Q6AF6BAgTEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
