CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-15 10:25:04
+lastsearch = 2024-07-15 14:16:05
 
 [shopee.vn]
 match = 7.4%%
@@ -155,4 +155,9 @@ url = https://hellocon.vn/chan-long-tuyet-chezbebe
 match = -37.0%%
 title = Mền Lông Tuyết Bền Đẹp, Giá Tận Gốc, Cần Phải Mua Ngay
 url = https://www.sendo.vn/men-long-tuyet.htm
+
+[www.bebong.vn]
+match = 36.4%%
+title = Chăn lông tuyết cho bé
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 
