--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-15 09:11:43
+lastsearch = 2024-07-15 14:15:23
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,14 +22,14 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -81.8%%
+title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
+url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [tunhuamiennam.com]
-match = -227.3%%
-title = GIƯỜNG NHỰA CAO CẤP CHIN HUEI 2.0PLUS GN15PLUS
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-cao-cap-chin-huei-2-0plus-gn15plus/
+match = -172.7%%
+title = giường nhựa cứng ecoplast cao cấp gec60
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
