--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-15 11:18:38
+lastsearch = 2024-07-15 14:20:05
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -253.3%%
-title = D2 (1976--1981) ĐHCSND | Đầu tháng 3 âm lịch , kể ra thì ...
-url = https://www.facebook.com/groups/925615600806693/posts/đầu-tháng-3-âm-lịch-kể-ra-thì-vẫn-còn-tiết-xuân-sau-hội-khoá-46-năm-một-năm-rưỡi/7753730264661825/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
