--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-15 13:27:19
+lastsearch = 2024-07-15 14:27:13
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -60.9%%
-title = Korean server Crowe is dead : r/TowerofFantasy
-url = https://www.reddit.com/r/TowerofFantasy/comments/x7z1kj/korean_server_crowe_is_dead/
+match = -13.0%%
+title = Playing on NA servers from Korea?
+url = https://www.reddit.com/r/leagueoflegends/comments/6d4p1g/playing_on_na_servers_from_korea/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -121.7%%
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.usmcu.edu]
 match = -104.3%%
