--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-15 13:49:43
+lastsearch = 2024-07-15 14:26:19
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -110.5%%
-title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
+match = -42.1%%
+title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -240,4 +240,9 @@ url = https://wwws.airfrance.ng/en-ng/flights-from-lagos-to-toronto
 match = -105.3%%
 title = REPORT - UConn Health - University of Connecticut
 url = https://health.uconn.edu/dept-pediatrics/wp-content/uploads/sites/54/2023/08/2022-Annual-Academic-Report-Pediatrics-and-Pediatric-Surgical-Subspecialties.pdf
+
+[bilystore.vn]
+match = -21.1%%
+title = Các loại thảm trang trí trong nội thất
+url = https://bilystore.vn/hieu-ro-hon-ve-tham-trang-tri-trong-noi-that/
 
