--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-15 13:28:13
+lastsearch = 2024-07-15 14:27:02
 
 [xoptraisan.info]
-match = -141.2%%
-title = Thảm nỉ ghép Tường Lâm 30x30 cao cấp chính hãng giá ...
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-30x30
+match = -147.1%%
+title = Thảm nỉ ghép Tường Lâm cao cấp khổ 40x40cm siêu giảm giá
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-40x40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -29.4%%
-title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
+match = -41.2%%
+title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -37,9 +37,9 @@ title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
 url = https://trieuchau.com/
 
 [www.facebook.com]
-match = -23.5%%
-title = Thảm Xốp Ghép Trải Sàn | Hanoi
-url = https://www.facebook.com/xoptraisan/
+match = 0.0%%
+title = THẢM XỐP TRẢI SÀN | Hanoi
+url = https://www.facebook.com/xoplotsan/
 
 [thamsami.com]
 match = -76.5%%
