CI images update

--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-15 09:12:28
+lastsearch = 2024-07-15 14:47:33
 
 [bellizeno.com]
 match = -14.3%%
@@ -12,9 +12,9 @@ title = Ruột gối vuông
 url = https://bellizeno.com/ruot-goi-vuong.33.html
 
 [shopee.vn]
-match = -6.7%%
-title = gối vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=gối vuông
+match = -40.0%%
+title = Gối vuông trang trí gối sofa đơn giản (có kèm ruột) ...
+url = https://shopee.vn/Gối-vuông-trang-trí-gối-sofa-đơn-giản-(có-kèm-ruột)-BOHIEM-Make-My-Home-i.137822515.7737844392
 
 [happynest.vn]
 match = -43.3%%
