--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-15 14:12:43
+lastsearch = 2024-07-15 14:45:29
 
 [everon.online]
 match = -29.4%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 14.7%%
-title = Bộ Ga chun chăn chần Everon bốn mùa 4 chi tiết màu ...
-url = https://vuanem.com/bo-ga-chun-chan-chan-everon-EST23034.html
+match = 17.6%%
+title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
+url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -73,8 +73,8 @@ url = https://anpha.vuanem.com/chan-ga-goi/chan
 
 [everonminhkhai.com]
 match = 72.7%%
-title = Bộ ga chun chần bốn mùa – Trang 5
-url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/page/5/
+title = Bộ ga chun chần bốn mùa – Trang 2
+url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/page/2/?per_page=60
 
 [m.facebook.com]
 match = -32.4%%
