--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-15 12:30:08
+lastsearch = 2024-07-15 14:44:19
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -253.3%%
+title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
+url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -213.3%%
+title = Trống cajon AB-D2 có tay vặn chỉnh âm - Kèm bao đựng ...
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-vặn-chỉnh-âm-Kèm-bao-đựng-và-lót-mông-Bảo-hành-1-năm-i.37429989.1681876016
 
 [quangharvest.com]
 match = -186.7%%
