--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-15 11:37:31
+lastsearch = 2024-07-15 14:49:07
 
 [shopee.vn]
-match = -214.3%%
-title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
+match = -171.4%%
+title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
+url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
 match = -214.3%%
@@ -17,9 +17,9 @@ title = 1.6M x 2M | Mùng Ngủ Tự Bung Dành Cho 2-4 Người (Đỏ ...
 url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/1-6m-x-2m-mung-ngu-tu-bung-danh-cho-2-4-nguoi-do-do-mngu-1m6-2m-chinh-hang.html
 
 [tiki.vn]
-match = -207.1%%
-title = Màm tự bung em bé 80cm x 180cm hàng chính hãng, giao ...
-url = https://tiki.vn/search?q=màm tự bung em bé 80cm x 180cm
+match = -221.4%%
+title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
 
 [manthutrang.com]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -150.0%%
-title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung.html
+match = -228.6%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [www.lazada.vn]
 match = -164.3%%
