--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-07-15 11:49:47
+lastsearch = 2024-07-15 14:46:19
 
 [www.diepxuan.com]
 match = 21.9%%
@@ -42,9 +42,9 @@ title = Do not buy. Mold, dipping, and bad customer service.
 url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B00Q7EPV8O?physicalId=71VeE93seRL&imageExtension=jpg&reviewId=R30EV4DZQJPO4B
 
 [forum.mattressunderground.com]
-match = -12.5%%
-title = Ultimate Dreams 13" Gel Memory Foam Mattress
-url = https://forum.mattressunderground.com/t/ultimate-dreams-13-gel-memory-foam-mattress-first-impressions/1121?page=4
+match = -28.1%%
+title = dreamfoam 13" gel?? - General Mattresses Questions
+url = https://forum.mattressunderground.com/t/dreamfoam-13-gel/6456
 
 [forums.hardwarezone.com.sg]
 match = -31.2%%
