--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-15 13:39:37
+lastsearch = 2024-07-15 14:47:03
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -25.0%%
-title = Alan Wu, PhD
-url = https://profiles.ucsf.edu/alan.wu
+match = 10.0%%
+title = Nicholas Butowski, MD
+url = https://profiles.ucsf.edu/nicholas.butowski
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
