--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-15 11:48:39
+lastsearch = 2024-07-15 15:16:38
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -223.1%%
+title = Yuki Hoi (@hoisoki) • Instagram photos and videos
+url = https://www.instagram.com/hoisoki/?hl=en
 
 [www.linkedin.com]
-match = -61.5%%
-title = Illustrator - Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 33.3%%
-title = Yuk Hoi Chan
-url = https://www.facebook.com/hoihihoi/
+match = -230.8%%
+title = Twoset Violin - Sight-Reading CURSED Key Signatures
+url = https://www.facebook.com/TwoSetViolin/posts/sight-reading-cursed-key-signatures/2881780741926275/
 
 [happypaca.tumblr.com]
 match = -276.9%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -223.1%%
-title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
-url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
+match = -107.7%%
+title = Yuki Chan - Hong Kong, Hong Kong SAR
+url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -180,4 +180,9 @@ url = https://www.csus.edu/college/engineering-computer-science/about-the-colleg
 match = 7.7%%
 title = Unclaimed Funds
 url = https://www.honolulu.gov/budget/escheated-checks.html
+
+[www.deviantart.com]
+match = -61.5%%
+title = yuki-bushido User Profile
+url = https://www.deviantart.com/yuki-bushido/favourites/62985112/stuff-of-my-characters?page=6
 
