--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-15 13:50:06
+lastsearch = 2024-07-15 15:39:22
 
 [gobearcats.com]
 match = -142.1%%
@@ -202,9 +202,9 @@ title = Katie Pollard, PhD
 url = https://gladstone.org/people/katie-pollard
 
 [www.nature.com]
-match = -173.7%%
-title = Functional gene delivery to and across brain vasculature of ...
-url = https://www.nature.com/articles/s41467-023-38582-7
+match = -205.3%%
+title = Effects of high-intensity interval training on cardiometabolic ...
+url = https://www.nature.com/articles/s41391-024-00867-3
 
 [faculty.mdanderson.org]
 match = 26.3%%
@@ -465,4 +465,19 @@ url = https://www.nighthawknyc.com/2019/02/16/tomorrow-never-knows-a-qa-with-rob
 match = 26.3%%
 title = DOE SC Awards FY2020
 url = https://science.osti.gov/-/media/_/excel/universities/DOE-SC_Grants_FY2020.xlsx
+
+[hanvico.com.vn]
+match = 0.0%%
+title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
+url = https://hanvico.com.vn/
+
+[courtlists.fcfcoa.gov.au]
+match = -189.5%%
+title = Daily Court Lists - Federal Circuit and Family Court of Australia
+url = https://courtlists.fcfcoa.gov.au/wps/wcm/connect/fcfcoa/court-lists-and-circuits/daily-court-lists
+
+[www.judcom.nsw.gov.au]
+match = -14.3%%
+title = Table of cases
+url = https://www.judcom.nsw.gov.au/publications/benchbks/sentencing/table_of_cases.html
 
