--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-15 13:51:09
+lastsearch = 2024-07-15 15:35:50
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = BỘ CHĂN GA KẺ CARO MODAL 14 - La Sante Việt Nam
 url = https://lasantevn.com/bo-chan-ga-ke-caro-modal-14/
 
 [chandem.com.vn]
-match = 4.8%%
-title = Bộ chăn ga gối cao cấp Chang My P144
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
+match = 33.3%%
+title = Bộ chăn ga gối Pink Girl Y14
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-y14/
 
 [koala.vn]
 match = -38.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -42.9%%
-title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [songhong.info]
 match = -19.0%%
