--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-15 13:21:29
+lastsearch = 2024-07-15 15:35:15
 
 [eva.vn]
 match = -136.8%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = 21.1%%
-title = Hoa chiều tím hồng cao C1
-url = https://mocnhienfarm.com/products/hoa-chieu-tim
+match = -7.7%%
+title = Cây pháo bông
+url = https://mocnhienfarm.com/products/cay-phao-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=P2FZLlxjB4U
+match = -152.6%%
+title = Kỹ thuật chăm sóc mộc hương: Loài cây đắt đỏ không tưởng ...
+url = https://www.youtube.com/watch?v=sOj6zpeGxxU
 
 [trungquang.com]
 match = 0.0%%
