--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-15 13:22:59
+lastsearch = 2024-07-15 15:45:25
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -112,9 +112,9 @@ title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
 url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
 
 [trongdoitam1.mysapo.net]
-match = -7.1%%
-title = Tượng đức mẹ đá 14 - Đá mỹ nghệ Ninh Bình
-url = https://trongdoitam1.mysapo.net/tuong-duc-me-da-14
+match = 14.3%%
+title = Bia đá 14 - Đá mỹ nghệ Ninh Bình
+url = https://trongdoitam1.mysapo.net/bia-da-14
 
 [www.dkn.tv]
 match = -21.4%%
