--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-15 13:46:57
+lastsearch = 2024-07-15 15:51:30
 
 [helloviettravel.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -193.8%%
-title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
-url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
+url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -218.8%%
-title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
-url = https://www.youtube.com/watch?v=esnw2jXy9g0
+match = -162.5%%
+title = Thái Lan cảnh báo chiêu trò "Tour du lịch 0 đồng" | THDT
+url = https://www.youtube.com/watch?v=_tRJfAFIJbI
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
