CI images update

--- a/images/bo-chan-ga-goi-sensy18-190/config.ini
+++ b/images/bo-chan-ga-goi-sensy18-190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sensy18-190.html
 lastopen = 2024-06-09 23:37:19
 
 [search]
-lastsearch = 2024-07-15 13:50:26
+lastsearch = 2024-07-15 16:17:18
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -55,4 +55,19 @@ url = https://thebarefootkitchenwitch.typepad.com/the_barefoot_kitchen_witc/2009
 match = -61.5%%
 title = How to Make Salteñas (Bolivian Hand Pies) From Scratch
 url = https://www.pinterest.com/pin/246572148335041915/
+
+[thuyancom.blogspot.com]
+match = -19.2%%
+title = Mien Ga - Chicken Cellophane Noodle Soup
+url = http://thuyancom.blogspot.com/2009/09/mien-ga-chicken-cellophane-noodle-soup.html
+
+[www.facebook.com]
+match = -88.5%%
+title = TanHsuehYun - Chicken pie for tea time. Got lucky at Oven ...
+url = https://www.facebook.com/TanHsuehYun/photos/pb.144004898985024.-2207520000.1463404801./1116969945021843/?type=3
+
+[www.rollitup.org]
+match = 17.4%%
+title = bodhi seeds | Page 1880
+url = https://www.rollitup.org/t/bodhi-seeds.518143/page-1880
 
