--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-15 14:45:58
+lastsearch = 2024-07-15 16:23:11
 
 [www.dem365.vn]
 match = -61.9%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -57.1%%
-title = [RẺ VÔ ĐỊCH] CHĂN PHAO SIÊU NHẸ MẪU BÒ SỮA GHI
-url = https://shopee.vn/-RẺ-VÔ-ĐỊCH-CHĂN-PHAO-SIÊU-NHẸ-MẪU-BÒ-SỮA-GHI-SIÊU-DỄ-THƯƠNG-ĐỦ-MẪU-LỰA-CHỌN-IB-CHỌN-MẪU-trungvbhp_shopalot2-i.4330387.11523902573
+match = -66.7%%
+title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/bộ chăn phao
 
 [suongtuyet.com]
 match = 28.6%%
