--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-15 15:48:28
+lastsearch = 2024-07-15 16:16:31
 
 [demxanh.com]
-match = 31.0%%
-title = Chiếu điều hòa cao su non Tencel Xanh coban
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-coban.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Modern viền lụa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-modern-vien-lua.html
 
 [leflair.com]
 match = 6.9%%
