--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-15 13:19:35
+lastsearch = 2024-07-15 16:14:13
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = -8.0%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = 4.0%%
+title = Bộ ga chun Cotton chống thấm màu trắng
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 
 [www.lazada.vn]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Bộ ga chun Thắng Lợi 180x200
 url = https://www.diepxuan.com/bo-ga-chun-thang-loi-180x200.html
 
 [everonvn.com.vn]
-match = -88.0%%
-title = Ep 1526, bảng giá bộ chăn ga gối Everon Ep1526 Hàn Quốc ...
-url = https://everonvn.com.vn/everon/275/everon-ep1526
+match = -61.5%%
+title = Everon Es1503
+url = https://everonvn.com.vn/everon/259/everon-es1503
 
 [songhongonline.vn]
 match = 17.4%%
