--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-15 10:40:46
+lastsearch = 2024-07-15 16:22:17
 
 [www.zillow.com]
 match = -69.2%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -207.7%%
-title = GANI (@ganistudios) • Instagram photos and videos
-url = https://www.instagram.com/ganistudios/
+match = -261.5%%
+title = Jacq Gani (@gainswithjacq) • Instagram photos and videos
+url = https://www.instagram.com/gainswithjacq/?hl=en
 
 [www.mariettaga.gov]
 match = -38.5%%
