--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-15 11:46:49
+lastsearch = 2024-07-15 16:14:42
 
 [www.lazada.vn]
-match = -88.9%%
-title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -61.1%%
+title = Orangesky Cần Câu Cá Biển Yuantou ...
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Đặc Sản - Ăn Vặt Việt Nam tại Mỹ
-url = https://www.facebook.com/groups/956905268092222/
+match = -127.8%%
+title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
+url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
 
 [thegioinem.com]
 match = 23.5%%
@@ -32,14 +32,14 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -155.6%%
-title = Tipps and Tricks - How to make CHA GIO - Authentic ...
-url = https://www.youtube.com/watch?v=YdTLFfXiGMk
+match = -133.3%%
+title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
+url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
 
 [www.instagram.com]
-match = -172.2%%
-title = Quán nem nướng, bún thịt nướng siêu tâm đắc của tuiiiii. ...
-url = https://www.instagram.com/danang_angi/p/C8FKUaLvOLp/
+match = -138.9%%
+title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
+url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
 
 [vietnamnet.vn]
 match = -144.4%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -38.9%%
-title = Scandal 5 July Full Episode 2024
-url = https://www.tiktok.com/discover/scandal-5-july-full-episode-2024
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -145,4 +145,9 @@ url = https://www.sec.gov/Archives/edgar/data/1606268/000119312514253996/0001193
 match = -54.5%%
 title = 14cr14MoVNb
 url = https://www.bladeforums.com/threads/14cr14movnb.1912177/
+
+[vovgiaothong.vn]
+match = -161.1%%
+title = Thả cá tiễn ông Công, ông Táo: Người nhẹ nhàng, người ...
+url = https://vovgiaothong.vn/newsaudio/tha-ca-tien-ong-cong-ong-tao-nguoi-nhe-nhang-nguoi-nem-toet-cho-xong-d31530.html
 
