--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-15 16:20:12
+lastsearch = 2024-07-15 16:52:42
 
 [everon.online]
 match = -7.4%%
@@ -37,14 +37,14 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 10.5%%
+title = Bộ Everon Epm-21070
+url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM-21071
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21071-1533
+title = Bộ chăn ga gối Everon ESM-21016
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-21016-1518
 
 [shopee.vn]
 match = -44.4%%
