--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-15 16:17:04
+lastsearch = 2024-07-15 16:52:00
 
 [eva.vn]
-match = -136.8%%
-title = Cây mọc hoang "đổi vận” làm cây cảnh, nở cả trăm bông ...
-url = https://eva.vn/cay-canh-vuon/cay-moc-hoang-doi-van-lam-cay-canh-no-ca-tram-bong-mot-luc-mang-huong-thom-diu-ngot-c283a598091.html
+match = -110.5%%
+title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ...
+url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
 match = -152.6%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 21.1%%
+title = Hoa chiều tím hồng cao C1
+url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -152.6%%
-title = Kỹ thuật chăm sóc mộc hương: Loài cây đắt đỏ không tưởng ...
-url = https://www.youtube.com/watch?v=sOj6zpeGxxU
+match = -136.8%%
+title = SH.8771. Lần đầu tiên thấy cây Mộc Hương bonsai dáng đẹp ...
+url = https://www.youtube.com/watch?v=It91wsH0t3U
 
 [trungquang.com]
 match = 0.0%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -147.4%%
-title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
+match = -57.9%%
+title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
