--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-15 15:37:38
+lastsearch = 2024-07-15 16:50:27
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -237.5%%
-title = Long lasting lip liner hack! #hudabeauty #foryou #beautytok ...
-url = https://www.tiktok.com/@hudabeauty/video/7267259073853246763
+match = -231.2%%
+title = Who remembers this hack? Using a wet velour puff to apply ...
+url = https://www.tiktok.com/@hudabeauty/video/7316247408676080942
 
 [www.diepxuan.com]
 match = -150.0%%
