CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-15 14:33:27
+lastsearch = 2024-07-15 17:35:32
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -455,4 +455,9 @@ url = https://www.vietjack.com/sbt-vat-li-11-cd/cau-1-18-trang-12-sbt-vat-li-lop
 match = -131.2%%
 title = kwin kwin ♑【WW88.Game】ua vé số trực tuyến
 url = https://tcnn.vn/bmw/9165539/
+
+[fphimhdc.com]
+match = -212.5%%
+title = Phim Tiếng Gầm - Roar (2022) [Full HD-Vietsub + Thuyết ...
+url = https://fphimhdc.com/tieng-gam-168535348176011
 
