--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-15 16:22:58
+lastsearch = 2024-07-15 17:36:56
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
 url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -55.6%%
-title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
-url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
+match = -63.0%%
+title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
+url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -117,9 +117,9 @@ title = Valentine cake - feverdream_yuz - Blue Lock (Manga) ...
 url = https://archiveofourown.org/works/56978779
 
 [www.facebook.com]
-match = -18.5%%
-title = Tổng Đại Lý Chăn ga gối đệm QUỐC VŨ - Đà Nẵng
-url = https://www.facebook.com/changagoiquocvu/
+match = -14.8%%
+title = NẾU THẾ GIỚI NÀY ĐÃ KHÔNG DỊU DÀNG VỚI CẬU..
+url = https://www.facebook.com/groups/386973545401400/posts/nếu-thế-giới-này-đã-không-dịu-dàng-với-cậuchuyện-tôi-sắp-kể-cho-cậu-nghe-không-p/980452879386794/
 
 [play.google.com]
 match = 14.8%%
