CI images update

--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-15 16:52:00
+lastsearch = 2024-07-15 17:50:47
 
 [eva.vn]
-match = -110.5%%
-title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ...
+match = -131.6%%
+title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ...
 url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -136.8%%
-title = SH.8771. Lần đầu tiên thấy cây Mộc Hương bonsai dáng đẹp ...
-url = https://www.youtube.com/watch?v=It91wsH0t3U
+match = -152.6%%
+title = Kỹ thuật chăm sóc mộc hương: Loài cây đắt đỏ không tưởng ...
+url = https://www.youtube.com/watch?v=sOj6zpeGxxU
 
 [trungquang.com]
 match = 0.0%%
@@ -230,4 +230,19 @@ url = https://baodaklak.vn/the-thao/trong-nuoc/202407/giai-bong-da-7-nguoi-vo-di
 match = -131.6%%
 title = Nỗi lo lớn nhất của tuyển Anh tại chung kết EURO 2024
 url = https://laodong.vn/bong-da-quoc-te/noi-lo-lon-nhat-cua-tuyen-anh-tai-chung-ket-euro-2024-1366077.ldo
+
+[thoibaotaichinhvietnam.vn]
+match = -142.1%%
+title = Thêm đường dây cá độ bóng đá hơn 100 tỷ đồng bị triệt phá
+url = https://thoibaotaichinhvietnam.vn/them-duong-day-ca-do-bong-da-hon-100-ty-dong-bi-triet-pha-155008.html
+
+[vnvc.vn]
+match = -163.2%%
+title = Dấu hiệu bệnh sởi ở trẻ dưới 1 tuổi cùng cách điều trị và ...
+url = https://vnvc.vn/dau-hieu-benh-soi-o-tre-duoi-1-tuoi/
+
+[vnexpress.net]
+match = -157.9%%
+title = Giữ được gia đình hạnh phúc khi chọn tha thứ chồng ngoại ...
+url = https://vnexpress.net/giu-duoc-gia-dinh-hanh-phuc-khi-chon-tha-thu-chong-ngoai-tinh-4770032.html
 
