--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 16:31:26
+lastsearch = 2024-07-15 17:45:01
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -182.4%%
-title = Department of State Publication: Department and Foreign ...
-url = https://books.google.com/books?id=fqjlLd9U4NMC&pg=PA193&lpg=PA193&dq=man+in+hoa+dep+16&source=bl&ots=8kgVWwho5E&sig=ACfU3U3rctlXvYUSlv6e9QfVlpNdCs-6FA&hl=en&sa=X&ved=2ahUKEwj7kq-l3qiHAxUCFlkFHR5fBkwQ6AF6BAgmEAM
+match = -200.0%%
+title = Ot Kjachty na istoki Želtoj rěki: Četvertoe putešestvie v ...
+url = https://books.google.com/books?id=kjMZ8hcbS6sC&pg=PT7&lpg=PT7&dq=man+in+hoa+dep+16&source=bl&ots=LZsWe22uAD&sig=ACfU3U1hG20eUoBtGS5pXXFXuIVm6krY2A&hl=en&sa=X&ved=2ahUKEwjvvdPe7qiHAxVUEVkFHZSSCAQQ6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
