--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-15 13:53:34
+lastsearch = 2024-07-15 17:44:52
 
 [shopee.vn]
 match = 2.9%%
@@ -63,8 +63,8 @@ url = https://cungnhaulamgiau.vn/chieu-dieu-hoa-cao-su-non-coco-dac-biet-2024_p6
 
 [nemuytin.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 9 - Nệm Uy Tín
-url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-9/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
 [thegioinem.com]
 match = 29.4%%
@@ -77,9 +77,9 @@ title = Chiếu Điều Hoà Tencel Cao Su Non Cho Bé kèm gối 2024
 url = https://www.hangjapan.com/chieu-dieu-hoa-tencel-cao-su-non-cho-be-kem-goi/
 
 [tiki.vn]
-match = 44.1%%
-title = Chiếu điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu điều hòa
+match = 14.7%%
+title = Chiếu điều hòa cao su non hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu điều hòa cao su non
 
 [vtvhyundai.vn]
 match = 14.7%%
