--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-15 17:20:33
+lastsearch = 2024-07-15 17:46:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -132,9 +132,9 @@ title = Con gái út của Quyền Linh: Nhan sắc thăng hạng ở tuổi 16 
 url = https://vtcnews.vn/con-gai-ut-cua-quyen-linh-nhan-sac-thang-hang-o-tuoi-16-gu-thoi-trang-ca-tinh-ar882366.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
+match = -187.5%%
+title = Vietstock Daily 16/07/2024: Tâm lý thận trọng gia tăng
+url = https://vietstock.vn/2024/07/vietstock-daily-16072024-tam-ly-than-trong-gia-tang-1636-1207428.htm
 
 [www.dcine.vn]
 match = 20.0%%
@@ -450,4 +450,9 @@ url = https://subaruminhthanh.com.vn/forester-2-0i-l.html
 match = 0.0%%
 title = The Peru Less Traveled
 url = https://www.ediblebrooklyn.com/2019/the-peru-less-traveled/
+
+[kinhtedothi.vn]
+match = -118.8%%
+title = Tử vi ngày 16/7/2024 của 12 cung hoàng đạo
+url = https://kinhtedothi.vn/tu-vi-ngay-16-7-2024-cua-12-cung-hoang-dao-ma-ket-dung-lo-la.html
 
