--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-15 16:48:38
+lastsearch = 2024-07-15 17:47:13
 
 [demxanh.com]
-match = 64.7%%
-title = Chiếu trúc hạt đen
-url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html
+match = -135.3%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [dem24h.vn]
 match = -29.4%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemtot.vn]
-match = 46.2%%
-title = Chiếu Hạt Đen
-url = https://thegioidemtot.vn/dt17327-chieu-hat-den.html
+match = -58.8%%
+title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
+url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [demre.com.vn]
 match = 35.3%%
@@ -48,8 +48,8 @@ url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [chieutrelanlan.com]
 match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+title = Chiếu trúc mắt nhỏ có viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-120x190cm-35.html
 
 [chieu.com.vn]
 match = 41.2%%
