--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-15 13:20:30
+lastsearch = 2024-07-15 17:48:38
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -524,7 +524,7 @@ url = https://www.mentimeter.com/
 [www.microsoft.com]
 match = -140.0%%
 title = Microsoft – Cloud, Computers, Apps & Gaming
-url = https://www.microsoft.com/
+url = https://www.microsoft.com/en-us
 
 [checkhimout.ca]
 match = -66.7%%
