CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 17:45:01
+lastsearch = 2024-07-15 18:44:52
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -200.0%%
-title = Ot Kjachty na istoki Želtoj rěki: Četvertoe putešestvie v ...
-url = https://books.google.com/books?id=kjMZ8hcbS6sC&pg=PT7&lpg=PT7&dq=man+in+hoa+dep+16&source=bl&ots=LZsWe22uAD&sig=ACfU3U1hG20eUoBtGS5pXXFXuIVm6krY2A&hl=en&sa=X&ved=2ahUKEwjvvdPe7qiHAxVUEVkFHZSSCAQQ6AF6BAgXEAM
+match = -111.8%%
+title = Newsletter - Page 50 - Google Books Result
+url = https://books.google.com/books?id=idV5Fy_yxFQC&pg=RA12-PA50&lpg=RA12-PA50&dq=man+in+hoa+dep+16&source=bl&ots=2KKHQVH8SU&sig=ACfU3U2N6CxRhTSTeasQONSQPr-J0QQgPw&hl=en&sa=X&ved=2ahUKEwjFi-GO_KiHAxWCMlkFHRlXC6UQ6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
