--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-15 18:18:59
+lastsearch = 2024-07-15 18:51:55
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -117,9 +117,9 @@ title = Valentine cake - feverdream_yuz - Blue Lock (Manga) ...
 url = https://archiveofourown.org/works/56978779
 
 [www.facebook.com]
-match = -14.8%%
-title = NẾU THẾ GIỚI NÀY ĐÃ KHÔNG DỊU DÀNG VỚI CẬU..
-url = https://www.facebook.com/groups/386973545401400/posts/nếu-thế-giới-này-đã-không-dịu-dàng-với-cậuchuyện-tôi-sắp-kể-cho-cậu-nghe-không-p/980452879386794/
+match = -18.5%%
+title = Tổng Đại Lý Chăn ga gối đệm QUỐC VŨ - Đà Nẵng
+url = https://www.facebook.com/changagoiquocvu/
 
 [play.google.com]
 match = 14.8%%
