--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-15 17:21:23
+lastsearch = 2024-07-15 18:50:13
 
 [helloviettravel.com]
 match = -50.0%%
@@ -32,8 +32,8 @@ title = ‍♂️‍♀️Khám phá Khu trải nghiệm 18 tầng địa ngục
 url = https://www.facebook.com/quangninhgate/videos/️️khám-phá-khu-trải-nghiệm-18-tầng-địa-ngục-tại-điểm-du-lịch-quảng-ninh-gatekhu-/440182313402897/
 
 [vinpearl.com]
-match = -181.2%%
-title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
 url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -162.5%%
-title = Thái Lan cảnh báo chiêu trò "Tour du lịch 0 đồng" | THDT
-url = https://www.youtube.com/watch?v=_tRJfAFIJbI
+match = -125.0%%
+title = 18 tầng địa ngục ghê rợn ở Khu du lịch Suối Tiên
+url = https://www.youtube.com/watch?v=hah_1r1UOIg
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -137.5%%
-title = 30 Khu Du Lịch Việt Nam Nổi Tiếng Bạn Đừng Bỏ Lỡ
-url = https://www.klook.com/vi/blog/khu-du-lich-o-viet-nam/
+match = -150.0%%
+title = 15 Địa Điểm Du Lịch New York Nổi Tiếng Bạn Sẽ Thích
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-new-york/
 
 [dulichviet.com.vn]
 match = -181.2%%
