--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-15 08:03:33
+lastsearch = 2024-07-15 18:47:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -15.2%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [vongxepsaigon.vn]
 match = 27.3%%
@@ -132,9 +132,9 @@ title = ten Dia chi di dong
 url = https://pdfcoffee.com/download/dskh-gui-tiet-kiem-tren-5-ty-pdf-free.html
 
 [noithatbamboo.vn]
-match = 33.3%%
-title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
-url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
+match = 36.4%%
+title = Chiếu trúc mắt mai không viền màu vàng 180x200cm
+url = https://noithatbamboo.vn/chieu-truc-hat-1m8/chieu-truc-mat-mai-khong-vien-mau-vang-180x200cm.html
 
 [chieutrucchieutre.ete.vn]
 match = 30.3%%
