--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-07-15 16:30:45
+lastsearch = 2024-07-15 18:47:08
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột nệm Warmdream 180x200x05
 url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
 match = -56.0%%
@@ -110,4 +110,9 @@ url = https://www.ciee.org/go-abroad/college-study-abroad/blog/my-experience-bei
 match = 0.0%%
 title = 
 url = https://www.klook.com/en-US/blog/how-to-apply-for-south-korea-q-code/
+
+[www.tripadvisor.com.ph]
+match = -92.0%%
+title = Big problem....6-digit PIN not working in bank machines?
+url = https://www.tripadvisor.com.ph/ShowTopic-g294197-i8161-k5825114-Big_problem_6_digit_PIN_not_working_in_bank_machines-Seoul.html
 
