CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-15 17:46:29
+lastsearch = 2024-07-15 19:28:11
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -13,8 +13,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
 match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+title = Góc nhìn kỹ thuật phiên giao dịch chứng khoán ngày 16/7
+url = https://baomoi.com/goc-nhin-ky-thuat-phien-giao-dich-chung-khoan-ngay-16-7-vn-index-van-dang-van-dong-tich-luy-on-dinh-c49638928.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -132,9 +132,9 @@ title = Con gái út của Quyền Linh: Nhan sắc thăng hạng ở tuổi 16 
 url = https://vtcnews.vn/con-gai-ut-cua-quyen-linh-nhan-sac-thang-hang-o-tuoi-16-gu-thoi-trang-ca-tinh-ar882366.html
 
 [vietstock.vn]
-match = -187.5%%
-title = Vietstock Daily 16/07/2024: Tâm lý thận trọng gia tăng
-url = https://vietstock.vn/2024/07/vietstock-daily-16072024-tam-ly-than-trong-gia-tang-1636-1207428.htm
+match = -212.5%%
+title = Theo dấu dòng tiền cá mập 15/07: Tự doanh và khối ngoại ...
+url = https://vietstock.vn/2024/07/theo-dau-dong-tien-ca-map-1507-tu-doanh-va-khoi-ngoai-giao-dich-nguoc-chieu-o-nhieu-ma-830-1207689.htm
 
 [www.dcine.vn]
 match = 20.0%%
