--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-15 15:36:12
+lastsearch = 2024-07-15 19:30:31
 
 [shopee.vn]
 match = -90.5%%
@@ -115,4 +115,14 @@ url = https://noithattamviet.net/cam-nang/nhung-mau-giuong-ngu-2m-x-2m2-dep-an-t
 match = -95.2%%
 title = Giường bọc nệm I Mềm mại nồng nàn, cho giấc ngủ sang
 url = https://zenhomes.vn/giuong-boc-nem
+
+[nhadepoday.vn]
+match = -104.8%%
+title = 100+ Ý Tưởng Thiết Kế Phòng Ngủ 2 Giường Đẹp, Tiện Nghi
+url = https://nhadepoday.vn/phong-ngu-2-giuong/
+
+[nolulu.com]
+match = -95.2%%
+title = 35 mẫu giường ngủ 2 tầng cho bé trai và bé gái đẹp nhất
+url = https://nolulu.com/blogs/news/35-mau-giuong-ngu-2-tang-cho-be-trai-va-be-gai-dep-nhat
 
