CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-15 15:47:30
+lastsearch = 2024-07-15 20:25:24
 
 [everon.online]
 match = -12.0%%
@@ -235,4 +235,9 @@ url = https://thietkethicongtrongoi.com/nha-o-hai-tang/mua-ban-ve-nha-2-tang-4-p
 match = -104.0%%
 title = Kỹ thuật câu Fly - Welcome to HanoiFishing.com - Thu vien HFC
 url = http://www.hanoifishing.com/NewsDetail.aspx?newsID=894
+
+[vnexpress.net]
+match = 28.0%%
+title = Bức tượng cao nhất thế giới
+url = https://vnexpress.net/buc-tuong-cao-nhat-the-gioi-4610229.html
 
