--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-15 14:20:05
+lastsearch = 2024-07-15 20:24:16
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -160.0%%
+title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
+url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -82,9 +82,9 @@ title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơ
 url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
-match = -113.3%%
-title = 12 kinh lạc và các huyệt đạo trên cơ thể
-url = https://m.facebook.com/ngocanhspa85mtl/videos/12-kinh-lạc-và-các-huyệt-đạo-trên-cơ-thể/1493169384068508/
+match = -186.7%%
+title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2388470364866762/
 
 [vietnamairport.vn]
 match = -93.3%%
