--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-15 20:06:44
+lastsearch = 2024-07-15 20:21:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -360,4 +360,14 @@ url = https://www.lazada.vn/tag/chieu-lac-may/
 match = -126.7%%
 title = Perfect 4os Eth Flail (15/15/3/50) - Topic
 url = https://forums.d2jsp.org/topic.php?t=80019588&f=169
+
+[www.psywarrior.com]
+match = -80.0%%
+title = Poetry as Propaganda in Vietnam
+url = https://www.psywarrior.com/VNPoemLeaflets.html
+
+[shinhan.com.vn]
+match = 0.0%%
+title = BACH HOA XANH
+url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/BACH HOA XANH - EN_compressed.pdf
 
