--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-15 17:18:34
+lastsearch = 2024-07-15 20:20:31
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=Hlowwk59zU&sig=ACfU3U3OGpRwaT1ilWjLEooMqQuXKCF4og&hl=en&sa=X&ved=2ahUKEwjxnNDp6KiHAxUtFVkFHUe6B5oQ6AF6BAgTEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfiLMrl7&sig=ACfU3U16eWX8-NoPk3pkXinQeM6LqehCLA&hl=en&sa=X&ved=2ahUKEwjY_82_kamHAxUkGFkFHfdeCLsQ6AF6BAgkEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
