CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-15 19:25:05
+lastsearch = 2024-07-15 20:31:07
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = THE PRESIDENT'S DAILY BRIEF 13 AUGUST 1974 - FOIA
 url = https://www.cia.gov/readingroom/document/0006007790
 
 [8tharmy.korea.army.mil]
-match = -39.1%%
-title = The Official Home Page of the Eighth Army
-url = https://8tharmy.korea.army.mil/site/index.asp
+match = -108.7%%
+title = The Official Home Page of the Korean Service Corps Battalion
+url = https://8tharmy.korea.army.mil/ksc/
 
 [ourworldindata.org]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = -17.4%%
-title = Highest Volume Cryptocurrencies
-url = https://cryptoslate.com/highest-volume/
+match = 8.7%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [www.irs.gov]
 match = -78.3%%
