--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-07-15 18:11:16
+lastsearch = 2024-07-15 20:37:10
 
 [www.noithatpassion.com]
 match = -129.4%%
@@ -37,9 +37,9 @@ title = 797 регион это откуда [vespjE]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80adyaqv.xn--p1ai/5813267pam4r3v53xy275comafe88y
 
 [www.instagram.com]
-match = -188.2%%
-title = ♡ TISHY ୨₍ᐢ.ˬ.ᐢ₎୧ | these bali sunset photos deserve a ...
-url = https://www.instagram.com/tishtuazon/p/CxxdaTGPYur/?img_index=1
+match = -77.8%%
+title = Instagram
+url = https://www.instagram.com/sophmapua/reel/C8XBG8Svzyh/
 
 [m.facebook.com]
 match = -247.1%%
