--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-15 20:22:48
+lastsearch = 2024-07-15 20:36:00
 
 [www.youtube.com]
 match = -121.1%%
@@ -137,9 +137,9 @@ title = Chiếu trúc thanh viền lụa loại cây
 url = https://demxanh.com/chieu-truc-moc-lua-cay.html
 
 [vinanet.vn]
-match = -142.1%%
-title = TT hạt tiêu ngày 9/7: Giá tiêu được kỳ vọng lấy lại mốc ...
-url = https://vinanet.vn/nong-san/tt-hat-tieu-ngay-97-gia-tieu-duoc-ky-vong-lay-lai-moc-160000-dongkg-khi-nguon-cung-that-chat-787221.html
+match = -168.4%%
+title = Xuất khẩu gỗ, sản phẩm tăng trưởng nhờ sự phục hồi từ thị ...
+url = https://vinanet.vn/nong-san/xuat-khau-go-va-san-pham-tang-truong-nho-su-phuc-hoi-tu-thi-truong-787209.html
 
 [baodongkhoi.vn]
 match = -115.8%%
