--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-15 04:33:37
+lastsearch = 2024-07-15 20:32:12
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo Đanh ...
-url = https://www.youtube.com/watch?v=XMZHfpjUzhg
+match = -161.9%%
+title = 20231116 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=ltAacMEstjU
 
 [m.facebook.com]
 match = -95.2%%
