CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-15 18:46:46
+lastsearch = 2024-07-15 21:14:34
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = 12.5%%
-title = Everon 2022 - Bộ chăn ga gối
-url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
+match = -33.3%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22009
+url = https://www.everonvn.vn/chi-tiet/everon-esm22009.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Chăn ga gối Sông Hồng Cao Cấp Urban UC22 024
 url = https://thegioinem.com/chan-ga-goi-song-hong-cao-cap-urban-uc22-024.html
 
 [shopee.vn]
-match = -83.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -54.2%%
+title = Bộ chăn ga gối Cotton Đũi 5 món phong cách Hàn Quốc ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-Cotton-Đũi-5-món-phong-cách-Hàn-Quốc-mẫu-mới-2022-Ga-giường-vỏ-gối-chăn-hè-chất-đũi-thoáng-mát-không-xù-i.230538458.7132670880
 
 [everonletrongtan.com]
 match = 31.8%%
