CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-15 20:47:00
+lastsearch = 2024-07-15 21:37:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HwqgV71N&sig=ACfU3U3e6uoCux75MY236AaZeszu2pHXGw&hl=en&sa=X&ved=2ahUKEwi88LajnqiHAxVOhIkEHdltD7UQ6AF6BAgYEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HwqkR23R&sig=ACfU3U1Gtp4DzlO0kw7QwP5lyaGIttON2g&hl=en&sa=X&ved=2ahUKEwj9mqzOoqmHAxUP38kDHSMCD7sQ6AF6BAg_EAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
