--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-15 14:44:54
+lastsearch = 2024-07-15 21:31:00
 
 [www.lazada.vn]
 match = -60.9%%
@@ -17,14 +17,14 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 26.1%%
+title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
 
 [shopee.vn]
-match = -78.3%%
-title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
-url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
+match = 4.3%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [trangvangvietnam.com]
 match = 21.7%%
