--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-15 17:52:48
+lastsearch = 2024-07-15 21:32:54
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 4.0%%
-title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+match = -16.0%%
+title = Bộ ga chun Cotton chống thấm màu xanh bộ đội
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-bo-doi.html
 
 [www.lazada.vn]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Bộ ga chun Thắng Lợi 180x200
 url = https://www.diepxuan.com/bo-ga-chun-thang-loi-180x200.html
 
 [everonvn.com.vn]
-match = -61.5%%
-title = Everon Es1503
-url = https://everonvn.com.vn/everon/259/everon-es1503
+match = 12.0%%
+title = Bộ Ga Chun At-04 Giảm Giá - Everon
+url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [songhongonline.vn]
 match = 17.4%%
