CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-15 17:18:47
+lastsearch = 2024-07-15 21:48:48
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -147,9 +147,9 @@ title = Secured Home of canbangdongclc.com
 url = https://canbangdongclc.com/
 
 [tuoitre.vn]
-match = -10.0%%
-title = sitemaps-2017-11.xml
-url = https://tuoitre.vn/StaticSitemaps/sitemaps-2017-11.xml
+match = -64.0%%
+title = Người phụ nữ mua vàng từ Đài Loan về bán lại, chưa thấy ...
+url = https://tuoitre.vn/nguoi-phu-nu-mua-vang-tu-dai-loan-ve-ban-lai-chua-thay-loi-da-thay-an-6-nam-tu-20240715181013149.htm
 
 [baothuathienhue.vn]
 match = -72.0%%
