--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-15 20:53:03
+lastsearch = 2024-07-15 21:45:10
 
 [www.bible.com]
-match = -135.7%%
-title = JOHANA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung người lớn chống muỗi giá rẻ chính hã
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon
 
 [shopee.vn]
-match = -185.7%%
-title = Màn Khung Không Khoan Tường GIA LONG Khung Inox ...
-url = https://shopee.vn/Màn-Khung-Không-Khoan-Tường-GIA-LONG-Khung-Inox-304-Phi-16-Màu-Xanh-Hồng-KT-1m4-1m6-1m8-2m-i.1120412717.24251331954
+match = -128.6%%
+title = màn chụp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
