--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-15 19:30:53
+lastsearch = 2024-07-15 21:51:50
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -23,8 +23,8 @@ url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
 match = -13.3%%
-title = Đèn chiếu điểm HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
+title = Máng đèn HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/mang-den-htlight
 
 [www.htlightlevel.vn]
 match = -120.0%%
