--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-15 16:45:15
+lastsearch = 2024-07-15 21:48:26
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = 0.0%%
-title = Bài 14 – Quán buông bỏ
-url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
+match = -18.8%%
+title = Tụng 14 Giới Tiếp Hiện
+url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
 
 [phaata.com]
 match = -118.8%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -187.5%%
-title = Thánh Lễ Chúa Nhật Tuần XV Mùa Thường Niên năm B, 14 ...
-url = https://www.youtube.com/watch?v=jWPllT5Or7Y
+match = -75.0%%
+title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
+url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [vietbis.vn]
 match = -193.8%%
