--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-15 20:00:25
+lastsearch = 2024-07-15 21:50:30
 
 [www.youtube.com]
 match = -420.0%%
@@ -132,8 +132,8 @@ title =
 url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gjate-ne-bote
 
 [www.reddit.com]
-match = -340.0%%
-title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
+match = -100.0%%
+title = Ren's dying in V14 (maybe)
 url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
 
 [www.maciociaonline.com]
@@ -164,7 +164,7 @@ url = https://www.instagram.com/ren.el.king/?hl=en
 [www.researchgate.net]
 match = 0.0%%
 title = 
-url = https://www.researchgate.net/figure/Locations-of-Acupoints-CV14-Juque-on-the-anterior-meridian-line-of-the-upper_fig3_346516472
+url = https://www.researchgate.net/figure/The-five-Shu-points-of-the-12-meridians_tbl3_263665806
 
 [gretel-lane.myshopify.com]
 match = -120.0%%
