--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-15 20:20:20
+lastsearch = 2024-07-15 21:47:10
 
 [demxanh.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
-match = -78.3%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -82.6%%
+title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
 
 [tiki.vn]
 match = -60.9%%
@@ -23,8 +23,8 @@ url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-mau-08-p33
 
 [thegioidemviet.vn]
 match = -65.2%%
-title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
+title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [www.diepxuan.com]
 match = 100.0%%
