CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-15 18:11:28
+lastsearch = 2024-07-15 22:36:08
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -127,9 +127,9 @@ title = 2024 0625 69vn|ba sòng bạc hàng đầu châu á - AptoideV3.1.4
 url = https://www.sjcallahabad.org/tig/2024-0625-69vn.phtml
 
 [znews.vn]
-match = -212.5%%
-title = Xe phân khối lớn tông xe máy chạy ngược chiều, 2 mẹ con ...
-url = https://znews.vn/xe-phan-khoi-lon-tong-xe-may-chay-nguoc-chieu-2-me-con-tu-vong-post1485832.html
+match = -68.8%%
+title = Suti tuổi 16 cao vượt bố - Giải trí
+url = https://znews.vn/suti-tuoi-16-cao-vuot-bo-post1486129.html
 
 [primagold.com.vn]
 match = -225.0%%
@@ -485,4 +485,9 @@ url = https://quynhluu.nghean.gov.vn/thoi-su-chinh-tri/khai-mac-ky-hop-thu-17-hd
 match = -187.5%%
 title = 16ga.com ~ View topic - Drams Equivalent Chart for 16 ...
 url = http://www.16ga.com/forum/viewtopic.php?t=23452&sid=30667485ac752ac966400128685870ee
+
+[www.quora.com]
+match = -106.2%%
+title = What are some swear words in Vietnamese?
+url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 
