--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-15 13:54:41
+lastsearch = 2024-07-15 22:32:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -130,4 +130,9 @@ url = https://www.upecotourism.in/?CASINO=भगत सिंह डायलॉ
 match = -37.5%%
 title = Mặt bằng cản tiến độ loạt dự án giao thông lớn
 url = https://www.baogiaothong.vn/mat-bang-can-tien-do-loat-du-an-giao-thong-lon-192240712122800372.htm
+
+[manthutrang.com]
+match = 8.3%%
+title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
+url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
