--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-15 16:22:07
+lastsearch = 2024-07-15 22:32:40
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -52.4%%
@@ -122,9 +122,9 @@ title = giường gấp, giường xếp, giuong gap, giuong xep
 url = https://giuongxep.com/
 
 [www.lazada.vn]
-match = -38.1%%
-title = [HCM]Drap ga giường chống thấm trơn loại 1 ...
-url = https://www.lazada.vn/products/hcmdrap-ga-giuong-chong-tham-tron-loai-1-ga-giuong-cho-be-i324462716.html
+match = -23.8%%
+title = Thảm trải giường nỉ nhung hàng đẹp loại 1
+url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html
 
 [bvhungvuong.vn]
 match = -85.7%%
