--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-15 21:51:39
+lastsearch = 2024-07-15 22:39:09
 
 [vinatools.com]
 match = -140.0%%
@@ -152,9 +152,9 @@ title = Korea Visa Application Center in Ha Noi
 url = https://www.visaforkorea-vt.com/
 
 [www.foody.vn]
-match = -106.7%%
-title = Pong Quán - Nguyễn Gia Trí ở TP. HCM
-url = https://www.foody.vn/ho-chi-minh/pong-quan-nguyen-gia-tri
+match = -73.3%%
+title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
+url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
 
 [www.youtube.com]
 match = -173.3%%
