--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-15 19:28:11
+lastsearch = 2024-07-15 22:40:31
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -13,8 +13,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
 match = -168.8%%
-title = Góc nhìn kỹ thuật phiên giao dịch chứng khoán ngày 16/7
-url = https://baomoi.com/goc-nhin-ky-thuat-phien-giao-dich-chung-khoan-ngay-16-7-vn-index-van-dang-van-dong-tich-luy-on-dinh-c49638928.epi
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -67,14 +67,14 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -218.8%%
-title = Toàn cảnh Quốc tế 14/7: F-16 bắt đầu xuất kích ở Ukraine ...
-url = https://www.youtube.com/watch?v=Hni1WRoCH2M
+match = -81.2%%
+title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
+url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -131.2%%
-title = 5000 bài viết chuyên mục Tâm sự trên VnExpress
-url = https://books.google.com/books?id=-TLoEAAAQBAJ&pg=PT11180&lpg=PT11180&dq=chieu+lac+soc+16&source=bl&ots=1ao5nTqY3o&sig=ACfU3U1DYtzsDQDOyKpIh-K9JV0MXH48Eg&hl=en&sa=X&ved=2ahUKEwjAtLii6aiHAxUSFFkFHXCKBvIQ6AF6BAgbEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=SrRQAQAAIAAJ&pg=RA7-PA16&lpg=RA7-PA16&dq=chieu+lac+soc+16&source=bl&ots=Fcic81ilCe&sig=ACfU3U0NpBmyayESDxHWGG7xumTQe7lKdQ&hl=en&sa=X&ved=2ahUKEwjN843lsKmHAxWaD1kFHbc9A30Q6AF6BAgbEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -455,4 +455,9 @@ url = https://www.ediblebrooklyn.com/2019/the-peru-less-traveled/
 match = -118.8%%
 title = Tử vi ngày 16/7/2024 của 12 cung hoàng đạo
 url = https://kinhtedothi.vn/tu-vi-ngay-16-7-2024-cua-12-cung-hoang-dao-ma-ket-dung-lo-la.html
+
+[baoangiang.com.vn]
+match = -193.8%%
+title = Bế mạc Hội nghị lần thứ 16 Ban Chấp hành Đảng bộ tỉnh ...
+url = https://baoangiang.com.vn/be-mac-hoi-nghi-lan-thu-16-ban-chap-hanh-dang-bo-tinh-an-giang-a400231.html
 
