--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-15 17:17:41
+lastsearch = 2024-07-15 22:35:59
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = -33.3%%
-title = Adam Mosseri
-url = https://www.instagram.com/mosseri/?hl=en
+match = -123.8%%
+title = Jessica Alba (@jessicaalba) • Instagram photos and videos
+url = https://www.instagram.com/jessicaalba/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -77,8 +77,8 @@ title = Abbreviations | Oxford Classical Dictionary
 url = https://oxfordre.com/classics/page/3993
 
 [www.mms.com]
-match = -280.0%%
-title = M&M'S
+match = -52.4%%
+title = M&M'S: Personalized Gifts, Favors and More
 url = https://www.mms.com/en-us
 
 [www.unilad.com]
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -23.8%%
-title = Edith Piaf - Non, Je ne regrette rien
-url = https://www.youtube.com/watch?v=Q3Kvu6Kgp88
+match = -71.4%%
+title = Extreme - More Than Words (Official Music Video)
+url = https://www.youtube.com/watch?v=UrIiLvg58SY
 
 [www.epa.gov]
 match = -19.0%%
@@ -335,4 +335,14 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10172936/
 match = -147.6%%
 title = Forwards input to App D of DES,consisting of description of ...
 url = https://www.nrc.gov/docs/ML2013/ML20132C247.pdf
+
+[www.heyorca.com]
+match = 0.0%%
+title = 
+url = https://www.heyorca.com/blog/instagram-social-news
+
+[isocpp.github.io]
+match = 0.0%%
+title = C++ Core Guidelines
+url = https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines
 
