--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-15 22:15:06
+lastsearch = 2024-07-15 22:38:22
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -94.7%%
-title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
+match = -63.2%%
+title = 10 Khách sạn giá rẻ tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/HotelsList-Australia-Cheap-Hotels-zfp12992448.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
