CI images update

--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-15 18:48:25
+lastsearch = 2024-07-15 23:55:17
 
 [anlacphat.com]
 match = -118.8%%
@@ -17,8 +17,8 @@ title = FD990-4WD
 url = https://thacoanlac.vn/forland-fd990-4wd
 
 [vietnamese.alibaba.com]
-match = -225.0%%
-title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm ...
+match = -256.2%%
+title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm nước ...
 url = https://vietnamese.alibaba.com/product-detail/Visionking-30-90x100-Bak4-FMC-Spotting-1601019269249.html
 
 [dutoan.gxd.vn]
@@ -95,4 +95,9 @@ url = http://hunglien.net/san-pham/chieu-lac/
 match = -175.0%%
 title = 90mm or 100mm Prime: Micro Four Thirds Talk Forum
 url = https://www.dpreview.com/forums/thread/4232050
+
+[docuabeyeu.com]
+match = -75.0%%
+title = Xe chòi chân trẻ em lắp ghép YH 8810-1
+url = https://docuabeyeu.com/san-pham/xe-choi-chan-lap-ghep-yh-8810-1/
 
