--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-15 21:37:06
+lastsearch = 2024-07-15 23:51:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -650,4 +650,9 @@ url = https://catsu.edu.ph/wp-sotre.php?casino poker star
 match = -237.5%%
 title = Tra cứu đối tượng truy nã - Văn phòng cơ quan cảnh sát điều tra
 url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
+
+[drt.vn]
+match = -100.0%%
+title = Đài Phát thanh và Truyền hình Đắk Lắk
+url = https://drt.vn/
 
