--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-15 23:16:44
+lastsearch = 2024-07-15 23:47:39
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -67,9 +67,9 @@ title = Global Newsletter #71: No More Fairytales - Extinction Rebellion
 url = https://rebellion.global/pt/blog/2022/12/16/global-newsletter-71/
 
 [www.imdb.com]
-match = 0.0%%
-title = 
-url = https://www.imdb.com/title/tt29722855/characters/nm3011350
+match = -39.1%%
+title = My favorite young male actors between 18-35
+url = https://www.imdb.com/list/ls055304256/
 
 [www.reuters.com]
 match = -108.7%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -121.7%%
-title = S. Korean vice foreign minister holds bilateral meetings at ...
-url = https://en.yna.co.kr/view/AEN20171121002500315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
