--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-15 20:44:11
+lastsearch = 2024-07-16 00:11:49
 
 [tiki.vn]
 match = -200.0%%
@@ -18,8 +18,8 @@ url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
 match = -66.7%%
-title = Chăn đắp Lông Cừu 2m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-dap-long-cuu-2m/
+title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
 
 [tokyolife.vn]
 match = -193.3%%
