--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-15 19:28:02
+lastsearch = 2024-07-16 00:12:43
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -146.7%%
-title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
+match = -106.7%%
+title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -180.0%%
@@ -92,9 +92,9 @@ title = Ht14
 url = https://anhsangvacuocsong.vn/anh-sang-va-ung-dung-cong-nghe-vao-cuoc-song-dien-mat-troi-va-chieu-sang-led-thuc-trang-va-giai-phap/ht14/
 
 [m.facebook.com]
-match = -186.7%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2379836029063529/
+match = -226.7%%
+title = Chơi ké với chị gái được cái là chả lo hoạt động chỉ chăm ...
+url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/476995468272787/
 
 [bocongan.gov.vn]
 match = -73.3%%
