--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-15 23:39:50
+lastsearch = 2024-07-16 00:13:17
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [shopee.vn]
 match = -3.6%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 10.7%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [demxanh.com]
 match = -28.6%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
 url = https://www.sendo.vn/chieu-truc-hat.htm
 
 [www.lazada.vn]
-match = 0.0%%
-title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html
+match = -42.9%%
+title = Chiếu trúc hạt trắng Chiếu trúc hạt đen quế lâm hàng loại 1cao ...
+url = https://www.lazada.vn/products/chieu-truc-hat-trang-chieu-truc-hat-den-que-lam-hang-loai-1cao-cap-du-kich-thuoc-tu-1m2-den-2m2-i2701686233-s13201986239.html?from_gmc=1&fl_tag=1
 
 [thegioidemonline.com]
 match = -39.3%%
@@ -75,4 +75,29 @@ url = https://www.youtube.com/watch?v=8i3SOv4E4eo
 match = -10.7%%
 title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
+
+[caobanggreen.vn]
+match = -3.6%%
+title = Index of /wp-content/uploads/2024/05/
+url = https://caobanggreen.vn/wp-content/uploads/2024/05/
+
+[muathongminh.vn]
+match = -60.7%%
+title = Lịch sử giá Chiếu trúc hạt nâu, hạt vàng thái lan, chiếu quế ...
+url = https://muathongminh.vn/100-anh-that-chieu-truc-hat-nau-hat-vang-thai-lan-chieu-que-lam-cao-cap-hang-day-mat-dan-khit-p.1__3855211917__264312794
+
+[huyrua.wordpress.com]
+match = -67.9%%
+title = Câu cá bông lau – Con người và kỹ thuật - Huy Nguyen's Blog
+url = https://huyrua.wordpress.com/2009/05/27/cau-ca-bong-lau/
+
+[daa.uit.edu.vn]
+match = -200.0%%
+title = //:':r;.#
+url = https://daa.uit.edu.vn/sites/daa/files/202310/809-qd-dhqg_3-7-2023_quy_dinh_dgkqht_theo_hinh_thuc_tt.pdf
+
+[www.qdnd.vn]
+match = -36.8%%
+title = news-21-01-2024.xml
+url = https://www.qdnd.vn/sitemaps/0/2024/01/news-21-01-2024.xml
 
