--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-15 23:21:04
+lastsearch = 2024-07-16 00:19:33
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 13
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-13.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
 match = 25.0%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
 
 [www.lebguide.com]
-match = -39.3%%
-title = Bijou brigitte singen [pwi1Ak] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--80aaaahh3adsifyi7eva6j.xn--p1ai/3687591wwwroottopc4fe43y
+match = -32.1%%
+title = David sylvian height [PtU3HD] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1axcfdv.xn--p1ai/25681974moyanwxcomv4fe36a
 
 [news.google.it]
 match = -3.6%%
