--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-16 00:12:12
+lastsearch = 2024-07-16 00:52:17
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -131.6%%
-title = 41 Bài Hát Hay Dành Cho Trẻ Mầm Non - Nhạc Cho Bé Ăn ...
-url = https://www.youtube.com/watch?v=W_1H_GpoDh0
+match = -52.6%%
+title = Đi Cấy - Bé Tú Anh | Nhạc Thiếu Nhi [MV]
+url = https://www.youtube.com/watch?v=9Gw_ALBU8jg
 
 [dochoihoangthu.com]
 match = -121.1%%
